<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lexon</groupId>
    <artifactId>LexonRTP</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>LexonRTP</name>
    <description>High performance, Folia supported Random Teleport plugin with Redis and async queue.</description>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper API: Folia scheduler arabirimlerini (GlobalRegionScheduler vb.)
             ve teleportAsync / getChunkAtAsync metodlarini icerir.
             Ayni jar hem Paper hem Folia uzerinde calisir. -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.3-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Redis istemcisi (shade ile gomulur ve relocate edilir) -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>5.1.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- SQLite (varsayilan storage, Redis yoksa .db dosyasi kullanilir) -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.1.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <relocations>
                                <!-- Diger eklentilerle Jedis surum cakismasini onlemek icin -->
                                <relocation>
                                    <pattern>redis.clients.jedis</pattern>
                                    <shadedPattern>com.lexon.rtp.libs.jedis</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.commons.pool2</pattern>
                                    <shadedPattern>com.lexon.rtp.libs.pool2</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>com.lexon.rtp.libs.gson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.sqlite</pattern>
                                    <shadedPattern>com.lexon.rtp.libs.sqlite</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                                <!-- sqlite-jdbc classes are loaded reflectively (Class.forName),
                                     so keep them all out of minimizeJar. -->
                                <filter>
                                    <artifact>org.xerial:sqlite-jdbc</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
